[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Node-specific RPC methods for interaction with contracts."
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-contracts-rpc"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0"}
jsonrpsee = {version = "0.14.0", features = ["server", "macros"]}
serde = {version = "1", features = ["derive"]}

# Substrate Dependencies
pallet-contracts-primitives = {version = "6.0.0", path = "../common"}
pallet-contracts-rpc-runtime-api = {version = "4.0.0-dev", path = "./runtime-api"}
sp-api = {version = "4.0.0-dev", path = "../../../primitives/api"}
sp-blockchain = {version = "4.0.0-dev", path = "../../../primitives/blockchain"}
sp-core = {version = "6.0.0", path = "../../../primitives/core"}
sp-rpc = {version = "6.0.0", path = "../../../primitives/rpc"}
sp-runtime = {version = "6.0.0", path = "../../../primitives/runtime"}

[dev-dependencies]
serde_json = "1"
